--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,55 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  .scroll-view {
+    scroll-behavior: smooth;
+    scroll-margin-top: 160px;
+  }
+}
+@font-face {
+  font-family: "LINESeedSans";
+  src: url("../stores/fonts/LINESeedSansTH_W_XBd.woff2") format("woff2"),
+    url("../stores/fonts/LINESeedSansTH_W_XBd.woff") format("woff");
+  font-weight: 800;
+}
+@font-face {
+  font-family: "LINESeedSans";
+  src: url("../stores/fonts/LINESeedSansTH_W_Bd.woff2") format("woff2"),
+    url("../stores/fonts/LINESeedSansTH_W_Bd.woff") format("woff");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "LINESeedSans";
+  src: url("../stores/fonts/LINESeedSansTH_W_He.woff2") format("woff2"),
+    url("../stores/fonts/LINESeedSansTH_W_He.woff") format("woff");
+  font-weight: 700;
+}
+@font-face {
+  font-family: "LINESeedSans";
+  src: url("../stores/fonts/LINESeedSansTH_W_Rg.woff2") format("woff2"),
+    url("../stores/fonts/LINESeedSansTH_W_Rg.woff") format("woff");
+  font-weight: 300;
+}
+@font-face {
+  font-family: "LINESeedSans";
+  src: url("../stores/fonts/LINESeedSansTH_W_Th.woff2") format("woff2"),
+    url("../stores/fonts/LINESeedSansTH_W_Th.woff") format("woff");
+  font-weight: 100;
+}
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,13 +66,7 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: "LINESeedSans", sans-sarif;
 }
 
 @layer utilities {
