add layout and add modules to render page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,9 @@
 
 body {
   font-family: "LINESeedSans", sans-sarif;
+  min-height: 100vh;
+  box-sizing: border-box;
+  /* margin: 0; */
 }
 
 @layer utilities {
